--- a/FoodTracker/Info.plist
+++ b/FoodTracker/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>If seagulls are not on sea, it will be bagels.</string>
 </dict>
 </plist>
